# vegans.kz

./: .gitignore  404.html  CNAME  Cargo.toml  Dioxus.toml  README.md  flake.nix
.github/workflows/: publish.yml
assets/: main-dxhcd5fbc024bfbe40.css  main.css  vegans-kz-dxh4c501a137d7a28c5.js  vegans-kz-dxh81d29c2cd5f94c91.js  vegans-kz_bg-dxh103b803fe2982745.wasm  vegans-kz_bg-dxh4c13fcc1447d.wasm  vegans-kz_bg-dxhbc97b95f47ad77e.wasm
public/assets/: main-dxh105cc44321a12b40.css  main-dxh182aa5be74841e77.css  vegans-kz-dxhb397334b3c4bfc30.js
src/: main.rs
